bug fixes - search crossBtn align+ orderReport search field align + AM/PM conversion issue

--- a/src/app/components/header-tabs/header-tabs.component.css
+++ b/src/app/components/header-tabs/header-tabs.component.css
@@ -20,7 +20,7 @@
 
 .searchCross{
     top: 0.7em;
-    right: 5.5em;
+    right: 6em;
 }
 
 .mob .searchCross{
